Add compatibility with Java 8.